Adding cool background, favicon, and more
Adding a background, favicon , add actual color customization of background of calculator and removed the circle background below custom changer of background of color of calculator

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>CALCULATOR</title>
+  <link rel="shortcut icon" href="calc.jpeg" type="image/x-icon">
+  <title>Pro-Calcultor</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -13,7 +14,7 @@
     <div class="calculator">
       <form>
         <div class="display">
-          <input type="text" name="display">
+          <input type="text" name="display" placeholder="0">
         </div>
         <div>
           <input type="button" value="AC" onclick="display.value = '' " id="opert">
